--- a/EkoClient/src/app/market-place/market-place.component.html
+++ b/EkoClient/src/app/market-place/market-place.component.html
@@ -1,5 +1,6 @@
-<div class="container">
+<div class="market-place container">
   <div class="row">
+    <h1 class="market-place__title eko-title col-12">EKO</h1>
     <ng-container *ngFor="let producto of productos">
       <div class="col-4">
         <app-product-view-small [producto]="producto" [canEdit]="false"></app-product-view-small>
