--- a/EkoClient/src/app/product/product-view-small/product-view-small.component.html
+++ b/EkoClient/src/app/product/product-view-small/product-view-small.component.html
@@ -1,10 +1,12 @@
 <article class="eko-producto-small">
-  <figure>
+  <figure class="eko-producto-small__fig">
     <img src="https://source.unsplash.com/collection/{{producto._id}}/600x300">
   </figure>
-  <p>{{ producto.descripcion }}</p>
-  <p>Tipo: {{ producto.tipo }}</p>
-  <p>Precio: {{ producto.precio }}</p>
-  <a routerLink="/product/{{ producto.tipo }}/{{producto._id}}" routerLinkActive="router-link-active" class="eko-link">Ver</a>
-  <a *ngIf="canEdit" routerLink="/product-edit/{{producto._id}}" routerLinkActive="router-link-active" class="eko-link">Editar</a>
+  <div class="eko-producto-small__info">
+    <p class="eko-producto-small__info-text">{{ producto.descripcion }}</p>
+    <p class="eko-producto-small__info-type">{{ producto.tipo }}</p>
+    <p class="eko-producto-small__info-price">${{ producto.precio }}</p>
+  </div>
+  <a class="eko-producto-small__btn" routerLink="/product/{{ producto.tipo }}/{{producto._id}}" routerLinkActive="router-link-active">Ver</a>
+  <a class="eko-producto-small__btn" *ngIf="canEdit" routerLink="/product-edit/{{producto._id}}" routerLinkActive="router-link-active">Editar</a>
 </article>
