Integrando servicios usuario

--- a/EkoClient/src/app/user/register/register.component.html
+++ b/EkoClient/src/app/user/register/register.component.html
@@ -13,6 +13,9 @@
         <input placeholder="Edad" type="number" class="form-control" formControlName="edad" name="edad" required>
       </div>
       <div class="col-12">
+        <input placeholder="Link foto" type="text" class="form-control" formControlName="foto" name="foto">
+      </div>
+      <div class="col-12">
         <textarea placeholder="Descripción" type="text" class="form-control" formControlName="descripcion"
           name="descripcion" required></textarea>
       </div>
