--- a/EkoClient/src/app/product/product-view-small/product-view-small.component.html
+++ b/EkoClient/src/app/product/product-view-small/product-view-small.component.html
@@ -3,7 +3,7 @@
     <img src="https://source.unsplash.com/collection/{{producto._id}}/600x300">
   </figure>
   <div class="eko-producto-small__info">
-    <p class="eko-producto-small__info-text">{{ producto.descripcion }}</p>
+    <p class="eko-producto-small__info-text">{{ producto.titulo }}</p>
     <p class="eko-producto-small__info-type">{{ producto.tipo }}</p>
     <p class="eko-producto-small__info-price">${{ producto.precio }}</p>
   </div>
