--- a/EkoClient/src/app/question/question-form/question-form.component.html
+++ b/EkoClient/src/app/question/question-form/question-form.component.html
@@ -1,6 +1,6 @@
 <section class="eko-pregunta-form">
   <form class="eko-pregunta-form__form container" [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
-    <h3 class="eko-pregunta-form__form-title">Enviar una pregunta</h3>
+    <h3 class="eko-pregunta-form__form-title">Responder</h3>
     <div class="col-12">
       <textarea placeholder="Descripción" type="text" class="form-control" formControlName="descripcion"
         name="descripcion" required></textarea>
