--- a/EkoClient/src/app/rate/rate-form/rate-form.component.html
+++ b/EkoClient/src/app/rate/rate-form/rate-form.component.html
@@ -1,17 +1,18 @@
 <section class="eko-pregunta-form">
   <form class="eko-pregunta-form__form container" [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
-    <h3 class="eko-pregunta-form__form-title">Enviar una pregunta</h3>
+    <h3 class="eko-pregunta-form__form-title">Enviar una calificacion</h3>
     <div class="col-12">
       <label for="">Valoracion</label>
-      <input type="number" class="form-control" formControlName="valoracion" name="valoracion" required>
+      <input type="number" class="form-control" formControlName="valoracion" name="valoracion" required min="0" max="5">
     </div>
     <div class="col-12">
-      <textarea placeholder="Comentario" type="text" class="form-control" formControlName="comentario"
-        name="comentario" required></textarea>
+      <textarea placeholder="Comentario" type="text" class="form-control" formControlName="comentario" name="comentario"
+        required></textarea>
     </div>
     <div class="col-6 offset-3">
-      <button [disabled]="checkoutForm.invalid" class="btn btn-dark btn-lg btn-block btn-sm" type="submit">Enviar
-        pregunta</button>
+      <button [disabled]="checkoutForm.invalid" class="btn btn-dark btn-lg btn-block btn-sm" type="submit">
+        Enviar calificación y finalizar reserva
+      </button>
     </div>
   </form>
 </section>
