--- a/EkoClient/src/app/market-place/market-place.component.html
+++ b/EkoClient/src/app/market-place/market-place.component.html
@@ -1,3 +1,4 @@
+<app-twitter query="Turismo Colombia"></app-twitter>
 <div class="market-place container">
   <div class="row">
     <h1 class="market-place__title eko-title col-12">EKO</h1>
