--- a/EkoClient/src/app/product/product-view/product-view.component.html
+++ b/EkoClient/src/app/product/product-view/product-view.component.html
@@ -2,6 +2,7 @@
   <figure class="eko-producto__fig">
     <img src="https://source.unsplash.com/collection/{{id}}/1920x1080">
   </figure>
+  <app-twitter query="Turismo Colombia - {{producto.tipo}}"></app-twitter>
   <div class="eko-producto__container container">
     <div class="row justify-content-center">
       <div class="col-lg-8 col-11">
