--- a/EkoClient/src/app/twitter/twitter.component.scss
+++ b/EkoClient/src/app/twitter/twitter.component.scss
@@ -4,6 +4,7 @@ aside{
   background-color: white;
   padding: 20px;
   margin: 20px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 
 }
 
