--- a/EkoClient/src/app/twitter/twitter.component.scss
+++ b/EkoClient/src/app/twitter/twitter.component.scss
@@ -5,6 +5,7 @@ aside{
   padding: 20px;
   margin: 20px;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border-radius: 10px;
 
 }
 
