--- a/EkoClient/src/app/product/product-view/product-view.component.scss
+++ b/EkoClient/src/app/product/product-view/product-view.component.scss
@@ -14,8 +14,9 @@
   }
 
   &__container {
-    padding: 24px 0;
+    padding: 0 0 24px 0;
     background-color: #FFFFFF;
+    float: right;
 
     #{$self}__type {
       margin-bottom: 32px;
