--- a/EkoClient/src/app/product/product-view/product-view.component.html
+++ b/EkoClient/src/app/product/product-view/product-view.component.html
@@ -1,8 +1,6 @@
+<app-weather ciudad="{{producto.ciudad}}"></app-weather>
+<app-twitter query="Turismo Colombia - {{producto.tipo}}"></app-twitter>
 <article class="eko-producto" *ngIf="productoCargado">
-  <figure class="eko-producto__fig">
-    <img src="https://source.unsplash.com/collection/{{id}}/1920x1080">
-  </figure>
-  <app-twitter query="Turismo Colombia - {{producto.tipo}}"></app-twitter>
   <div class="eko-producto__container container">
     <div class="row justify-content-center">
       <div class="col-lg-8 col-11">
@@ -147,6 +145,9 @@
           <a class="eko-link" (click)="agregarAlCarrito()">Añadir al carrito</a>
           <br>
           <br>
+          <figure class="eko-producto__fig">
+            <img style="border-radius: 10px;" src="https://source.unsplash.com/collection/{{id}}/1920x1080">
+          </figure>
           <br>
           <!-- <app-rate-form [idProducto]="producto._id"></app-rate-form> -->
           <app-question-form [idProducto]="producto._id"></app-question-form>
