--- a/EkoClient/src/app/product/product-view/product-view.component.scss
+++ b/EkoClient/src/app/product/product-view/product-view.component.scss
@@ -1,7 +1,7 @@
 .eko-producto {
   $self: &;
 
-  margin-top: -20px;
+  margin-top: 40px;
   color: #333;
 
   .eko-title {
@@ -11,9 +11,15 @@
 
   &__fig {
     margin-bottom: 0;
+    border-radius: 10px;
+
   }
 
   &__container {
+    margin-top: 20px;
+    width: 50%;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    border-radius: 10px;
     padding: 24px 0;
     background-color: #FFFFFF;
 
