--- a/EkoClient/src/app/market-place/market-place.component.html
+++ b/EkoClient/src/app/market-place/market-place.component.html
@@ -1,5 +1,5 @@
-<app-twitter query="Turismo Colombia"></app-twitter>
-<div class="market-place container">
+<app-twitter query="Turismo"></app-twitter>
+<div class="market-place">
   <h1 class="market-place__title eko-title col-12">EKO</h1>
   <div class="searchContent">
     <input class="searchInput" type="text" [(ngModel)]="search" placeholder="Búsqueda...">
