--- a/EkoClient/src/app/market-place/market-place.component.scss
+++ b/EkoClient/src/app/market-place/market-place.component.scss
@@ -2,6 +2,13 @@
   .eko-title {
     text-align: center;
   }
+  background-color: white;
+  border-radius: 10px;
+  width: 75%;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  display: block;
+  padding: 30px;
+  margin: 40px 30px;
 }
 
 .searchInput{
