--- a/EkoClient/src/app/product/product-view/product-view.component.html
+++ b/EkoClient/src/app/product/product-view/product-view.component.html
@@ -1,5 +1,5 @@
 <app-weather ciudad="{{producto.ciudad}}"></app-weather>
-<app-twitter query="Turismo Colombia - {{producto.tipo}}"></app-twitter>
+<app-twitter query="Turismo {{producto.ciudad}}"></app-twitter>
 <article class="eko-producto" *ngIf="productoCargado">
   <div class="eko-producto__container container">
     <div class="row justify-content-center">
