Información REST Countries

--- a/EkoClient/src/app/form/product-form-edit/product-form-edit.component.html
+++ b/EkoClient/src/app/form/product-form-edit/product-form-edit.component.html
@@ -16,11 +16,11 @@
       </div>
       <div class="col-12">
         <label for="">Foto</label>
-        <input placeholder="Link foto" type="text" class="form-control" name="foto" [(ngModel)]="foto">
+        <input placeholder="Link foto" type="text" class="form-control" name="foto" [(ngModel)]="foto" required>
       </div>
       <div class="col-12">
         <label for="">Ciudad</label>
-        <input placeholder="Ciudad" type="text" class="form-control" name="ciudad" [(ngModel)]="ciudad">
+        <input placeholder="Ciudad" type="text" class="form-control" name="ciudad" [(ngModel)]="ciudad" required>
       </div>
       <h6>
         <strong class="col-12">Disponibilidad</strong>
