Mostrar fotos que son

--- a/EkoClient/src/app/product/product-view-small/product-view-small.component.html
+++ b/EkoClient/src/app/product/product-view-small/product-view-small.component.html
@@ -1,6 +1,6 @@
 <article class="eko-producto-small">
   <figure class="eko-producto-small__fig">
-    <img src="https://source.unsplash.com/collection/{{producto._id}}/600x300">
+    <img src="{{ producto.foto }}">
   </figure>
   <div class="eko-producto-small__info">
     <p class="eko-producto-small__info-text">{{ producto.titulo }}</p>
