--- a/EkoClient/src/app/product/product-view/product-view.component.html
+++ b/EkoClient/src/app/product/product-view/product-view.component.html
@@ -153,7 +153,7 @@
           <br>
           <br>
           <figure class="eko-producto__fig">
-            <img style="border-radius: 10px;" src="https://source.unsplash.com/collection/{{id}}/1920x1080">
+            <img style="border-radius: 10px;" src="{{ producto.foto }}">
           </figure>
           <br>
           <!-- <app-rate-form [idProducto]="producto._id"></app-rate-form> -->
